src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg__to_dense_out(value out, value self, int dtype, int masked_grad);
value atg__to_sparse_bsc(value self, value blocksize, value dense_dim);
value atg__to_sparse_bsc_out(value out, value self, value blocksize, value dense_dim);
value atg__to_sparse_bsr(value self, value blocksize, value dense_dim);
value atg__to_sparse_bsr_out(value out, value self, value blocksize, value dense_dim);
value atg__to_sparse_csc(value self, value dense_dim);
value atg__to_sparse_csc_out(value out, value self, value dense_dim);
value atg__to_sparse_csr(value self, value dense_dim);
value atg__to_sparse_csr_out(value out, value self, value dense_dim);
value atg__to_sparse_semi_structured(value dense);
value atg__transform_bias_rescale_qkv(value qkv, value qkv_bias, int64_t num_heads);
value atg__transform_bias_rescale_qkv_out(value out0, value out1, value out2, value qkv, value qkv_bias, int64_t num_heads);
value atg__transformer_encoder_layer_fwd(value src, int64_t embed_dim, int64_t num_heads, value qkv_weight, value qkv_bias, value proj_weight, value proj_bias, int use_gelu, int norm_first, double eps, value norm_weight_1, value norm_bias_1, value norm_weight_2, value norm_bias_2, value ffn_weight_1, value ffn_bias_1, value ffn_weight_2, value ffn_bias_2, value mask, value mask_type);
value atg__transformer_encoder_layer_fwd_out(value out, value src, int64_t embed_dim, int64_t num_heads, value qkv_weight, value qkv_bias, value proj_weight, value proj_bias, int use_gelu, int norm_first, double eps, value norm_weight_1, value norm_bias_1, value norm_weight_2, value norm_bias_2, value ffn_weight_1, value ffn_bias_1, value ffn_weight_2, value ffn_bias_2, value mask, value mask_type);
value atg__trilinear(value i1, value i2, value i3, value expand1, value expand2, value expand3, value sumdim, int64_t unroll_dim);
value atg__trilinear_out(value out, value i1, value i2, value i3, value expand1, value expand2, value expand3, value sumdim, int64_t unroll_dim);
value atg__triton_multi_head_attention(value query, value key, value value_, int64_t embed_dim, int64_t num_head, value qkv_weight, value qkv_bias, value proj_weight, value proj_bias, value mask);
value atg__triton_multi_head_attention_out(value out, value query, value key, value value_, int64_t embed_dim, int64_t num_head, value qkv_weight, value qkv_bias, value proj_weight, value proj_bias, value mask);
value atg__triton_scaled_dot_attention(value q, value k, value v, double dropout_p);
value atg__triton_scaled_dot_attention_out(value out, value q, value k, value v, double dropout_p);
value atg__unique(value self, int sorted, int return_inverse);
value atg__unique2(value self, int sorted, int return_inverse, int return_counts);
value atg__unique2_out(value out0, value out1, value out2, value self, int sorted, int return_inverse, int return_counts);
value atg__unique_out(value out0, value out1, value self, int sorted, int return_inverse);
value atg__unpack_dual(value dual, int64_t level);
value atg__unsafe_view(value self, value size);
value atg__unsafe_view_out(value out, value self, value size);
value atg__upsample_bicubic2d_aa(value self, value output_size, int align_corners, value scales_h, value scales_w);
value atg__upsample_bicubic2d_aa_backward(value grad_output, value output_size, value input_size, int align_corners, value scales_h, value scales_w);
value atg__upsample_bicubic2d_aa_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, int align_corners, value scales_h, value scales_w);
value atg__upsample_bicubic2d_aa_out(value out, value self, value output_size, int align_corners, value scales_h, value scales_w);
value atg__upsample_bicubic2d_aa_vec(value input, value output_size, int align_corners, value scale_factors);
value atg__upsample_bilinear2d_aa(value self, value output_size, int align_corners, value scales_h, value scales_w);
value atg__upsample_bilinear2d_aa_backward(value grad_output, value output_size, value input_size, int align_corners, value scales_h, value scales_w);
value atg__upsample_bilinear2d_aa_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, int align_corners, value scales_h, value scales_w);
value atg__upsample_bilinear2d_aa_out(value out, value self, value output_size, int align_corners, value scales_h, value scales_w);
value atg__upsample_bilinear2d_aa_vec(value input, value output_size, int align_corners, value scale_factors);
value atg__upsample_nearest_exact1d(value self, value output_size, value scales);
value atg__upsample_nearest_exact1d_backward(value grad_output, value output_size, value input_size, value scales);
value atg__upsample_nearest_exact1d_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, value scales);
value atg__upsample_nearest_exact1d_out(value out, value self, value output_size, value scales);
value atg__upsample_nearest_exact1d_vec(value input, value output_size, value scale_factors);
value atg__upsample_nearest_exact2d(value self, value output_size, value scales_h, value scales_w);
value atg__upsample_nearest_exact2d_backward(value grad_output, value output_size, value input_size, value scales_h, value scales_w);
value atg__upsample_nearest_exact2d_backward_grad_input(value grad_input, value grad_output, value output_size, value input_size, value scales_h, value scales_w);
value atg__upsample_nearest_exact2d_out(value out, value self, value output_size, value scales_h, value scales_w);
value atg__upsample_nearest_exact2d_vec(value input, value output_size, value scale_factors);
value atg__upsample_nearest_exact3d(value self, value output_size, value scales_d, value scales_h, value scales_w);