src/bindings/torch_bindings_generated1.ml


  let stubs__to_dense_out =
    foreign
      "atg__to_dense_out"
      (gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__to_sparse_bsc =
    foreign
      "atg__to_sparse_bsc"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__to_sparse_bsc_out =
    foreign
      "atg__to_sparse_bsc_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__to_sparse_bsr =
    foreign
      "atg__to_sparse_bsr"
      (gc_tensor @-> ptr int64_t @-> int @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__to_sparse_bsr_out =
    foreign
      "atg__to_sparse_bsr_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__to_sparse_csc =
    foreign "atg__to_sparse_csc" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__to_sparse_csc_out =
    foreign
      "atg__to_sparse_csc_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__to_sparse_csr =
    foreign "atg__to_sparse_csr" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__to_sparse_csr_out =
    foreign
      "atg__to_sparse_csr_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__to_sparse_semi_structured =
    foreign
      "atg__to_sparse_semi_structured"
      (ptr raw_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs__transform_bias_rescale_qkv =
    foreign
      "atg__transform_bias_rescale_qkv"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning void)
  ;;

  let stubs__transform_bias_rescale_qkv_out =
    foreign
      "atg__transform_bias_rescale_qkv_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning void)
  ;;

  let stubs__transformer_encoder_layer_fwd =
    foreign
      "atg__transformer_encoder_layer_fwd"
      (gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> double
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__transformer_encoder_layer_fwd_out =
    foreign
      "atg__transformer_encoder_layer_fwd_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> double
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__trilinear =
    foreign
      "atg__trilinear"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__trilinear_out =
    foreign
      "atg__trilinear_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__triton_multi_head_attention =
    foreign
      "atg__triton_multi_head_attention"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__triton_multi_head_attention_out =
    foreign
      "atg__triton_multi_head_attention_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__triton_scaled_dot_attention =
    foreign
      "atg__triton_scaled_dot_attention"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> double @-> returning raw_tensor)
  ;;

  let stubs__triton_scaled_dot_attention_out =
    foreign
      "atg__triton_scaled_dot_attention_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs__unique =
    foreign "atg__unique" (ptr raw_tensor @-> gc_tensor @-> int @-> int @-> returning void)
  ;;

  let stubs__unique2 =
    foreign
      "atg__unique2"
      (ptr raw_tensor @-> gc_tensor @-> int @-> int @-> int @-> returning void)
  ;;

  let stubs__unique2_out =
    foreign
      "atg__unique2_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__unique_out =
    foreign
      "atg__unique_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__unpack_dual =
    foreign
      "atg__unpack_dual"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> returning void)
  ;;

  let stubs__unsafe_view =
    foreign "atg__unsafe_view" (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__unsafe_view_out =
    foreign
      "atg__unsafe_view_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__upsample_bicubic2d_aa =
    foreign
      "atg__upsample_bicubic2d_aa"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_bicubic2d_aa_backward =
    foreign
      "atg__upsample_bicubic2d_aa_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_bicubic2d_aa_backward_grad_input =
    foreign
      "atg__upsample_bicubic2d_aa_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_bicubic2d_aa_out =
    foreign
      "atg__upsample_bicubic2d_aa_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_bicubic2d_aa_vec =
    foreign
      "atg__upsample_bicubic2d_aa_vec"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_bilinear2d_aa =
    foreign
      "atg__upsample_bilinear2d_aa"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_bilinear2d_aa_backward =
    foreign
      "atg__upsample_bilinear2d_aa_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_bilinear2d_aa_backward_grad_input =
    foreign
      "atg__upsample_bilinear2d_aa_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_bilinear2d_aa_out =
    foreign
      "atg__upsample_bilinear2d_aa_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_bilinear2d_aa_vec =
    foreign
      "atg__upsample_bilinear2d_aa_vec"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> ptr double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact1d =
    foreign
      "atg__upsample_nearest_exact1d"
      (gc_tensor @-> ptr int64_t @-> int @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact1d_backward =
    foreign
      "atg__upsample_nearest_exact1d_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact1d_backward_grad_input =
    foreign
      "atg__upsample_nearest_exact1d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact1d_out =
    foreign
      "atg__upsample_nearest_exact1d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact1d_vec =
    foreign
      "atg__upsample_nearest_exact1d_vec"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr double @-> int @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact2d =
    foreign
      "atg__upsample_nearest_exact2d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact2d_backward =
    foreign
      "atg__upsample_nearest_exact2d_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact2d_backward_grad_input =
    foreign
      "atg__upsample_nearest_exact2d_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact2d_out =
    foreign
      "atg__upsample_nearest_exact2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact2d_vec =
    foreign
      "atg__upsample_nearest_exact2d_vec"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr double @-> int @-> returning raw_tensor)
  ;;

  let stubs__upsample_nearest_exact3d =
    foreign
      "atg__upsample_nearest_exact3d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;
